--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Iago Colodetti",
   "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
+  "version": "1.0.1",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
