--- a/package.json
+++ b/package.json
@@ -2,33 +2,27 @@
   "name": "react-native-example",
   "author": "Iago Colodetti",
   "license": "MIT",
-  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.1",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.5",
-    "axios": "^0.19.2",
-    "expo": "~36.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7",
-    "react-navigation": "^4.2.2",
-    "react-navigation-stack": "^2.2.3"
+    "axios": "^1.4.0",
+    "expo": "~48.0.15",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "^0.71.8",
+    "react-native-gesture-handler": "2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "@babel/core": "^7.20.0"
   },
   "private": false
 }
